--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
         <img src="./assets/images/bday.png" width="275" />
         <h3><a href="./char.html">MK Character Ranking Project</a></h3>
         <img src="./assets/images/mk.png" width="275" />
+        <h3><a href="../3.2/anc.html">Favourite websites</a></h3>
         <hr>
         <a href="../4/public/about.html">About me</a>
         <a href="../4/public/contact.html">Contact me</a><br>
